tests/snapshots/snapshots/snapshots__snapshots__toon_output__toon_ready_output.snap
---
source: tests/snapshots/toon_output.rs
expression: normalized
---
[3]:
  - created_at: "2026-02-01T00:00:00Z"
    created_by: fixture
    description: Unblocks dependent work
    id: bd-blocker
    issue_type: task
    labels[1]: core
    priority: 0
    status: open
    title: "00 Blocking Root"
    updated_at: "2026-02-01T00:00:00Z"
  - created_at: "2026-02-02T00:00:00Z"
    created_by: fixture
    id: bd-ready-p0
    issue_type: bug
    labels[2]: agent,ops
    priority: 0
    status: open
    title: "01 Ready Critical Unassigned"
    updated_at: "2026-02-02T00:00:00Z"
  - assignee: alice
    created_at: "2026-02-03T00:00:00Z"
    created_by: fixture
    id: bd-ready-p1-assigned
    issue_type: feature
    labels[1]: frontend
    owner: owner@example.com
    priority: 1
    status: open
    title: "02 Ready Assigned Feature"
    updated_at: "2026-02-03T00:00:00Z"
